2025-07-31T01:01:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16637194918 # 721
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-31
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 585 978 / 596 989
* notice: next accum: outdated-unq outdated-all / unq all: 586 979 / 597 990
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-17] / [2025-07-30]

2025-07-30T01:01:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16610887145 # 720
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-30
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 584 977 / 595 988
* notice: next accum: outdated-unq outdated-all / unq all: 585 978 / 596 989
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-16] / [2025-07-29]

2025-07-29T01:06:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16583956279 # 719
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-29
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 583 976 / 594 987
* notice: next accum: outdated-unq outdated-all / unq all: 584 977 / 595 988
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-15] / [2025-07-28]

2025-07-28T01:04:54Z: