@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-31T01:01:17Z",
+  "timestamp" : "2025-08-02T00:58:46Z",
   "count_outdated" : 979,
   "uniques_outdated" : 586,
-  "count" : 990,
-  "uniques" : 597,
+  "count" : 991,
+  "uniques" : 598,
   "clones" : [
     {
       "timestamp": "2025-07-19T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-07-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
