@@ -1,3 +1,12 @@
+2025-08-02T00:58:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16688120066 # 723
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-02
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 586 979 / 597 990
+* notice: next accum: outdated-unq outdated-all / unq all: 586 979 / 598 991
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-08-01]
+
 2025-07-31T01:01:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16637194918 # 721
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-31
